did html and css

--- a/class-02-jquery-and-events/pair-assignment/starter-codez/styles/base.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-codez/styles/base.css
@@ -27,9 +27,11 @@ address {
 
 a, a:link, a:active {
   color: #777;
+  text-decoration: none;
 }
 
 a:hover, a:focus {
+  color: #F5AF3D;
 }
 
 a:visited {
