--- a/class-02-jquery-and-events/pair-assignment/starter-codez/styles/modules.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-codez/styles/modules.css
@@ -2,6 +2,7 @@
 
 .site-header {
   padding: .1em;
+  background-color: #F5AF3D;
 }
 
 .main-nav {
@@ -15,6 +16,7 @@
   font-size: 1.5em;
   padding: .5em .2em;
   border-bottom: 1px solid #ccc;
+  list-style-type: none;
 }
 
 /* TODO: Style the filters so they look good on small screens:
@@ -22,10 +24,13 @@
 
 #filters {
   padding: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  list-style-type: none;
 }
 
 #filters select {
-
+  width: 100%;
 }
 
 .template {
